--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         <div class="container">
                             <div class="hero-title">
                                 <h4>Servicio Premium y Cocina Gourmet</h4>
-								<img src="images/logoArrecife.png" alt="Logo del Restaurante Arrecife" class="responsive-logo">
+								<img src="images/logoarrecife.png" alt="Logo del Restaurante Arrecife" class="responsive-logo">
                                 <h2 class="textScript">Bienvenidos</h2>
                                 <a href="menu.html" class="hero_btn">Descubra nuestro Menú <i class="fal fa-long-arrow-right"></i></a>
                             </div>
