--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
                                     </div>
                                     <!--  hero-menu_content end  -->
                                     <div class="clearfix"></div>
-                                    <a href="#"<!--"menu.html"--> class="hero_btn" style="margin-left:30px;">Ver Todo el Menú <i class="fal fa-long-arrow-right"></i></a>
+                                    <a href="#" class="hero_btn" style="margin-left:30px;">Ver Todo el Menú <i class="fal fa-long-arrow-right"></i></a>
                                     <a href="#" class="pdf-link">Descarga el Menú</a>
                                 </div>
                             </div>
