--- a/index.html
+++ b/index.html
@@ -1050,6 +1050,7 @@
             <div class="element">
                 <div class="element-item"></div>
             </div>
+			<!--<div class="smoke" style="left: 200px; top: 300px;"></div>--> 
             <!-- cursor end-->                                                    
         </div>
         <!-- Main end -->
